manifests/base/deployment.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: 82252240 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: 82252240
  template:
    metadata:
      labels:
        app: 82252240 
    spec:
      containers:
        - name: 82252240 
          image: cepgstapacr.azurecr.io/82252240
          ports:
          - containerPort: 8080
