manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: cloud-sampl
spec:
    ports:
    - port: 8080 
    selector:
        app: cloud-sampl
